pwa/templates/pwa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwa
  labels:
    app: pwa
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pwa 
  template:
    metadata:
      labels:
        app: pwa
        version: v1
    spec:
      containers:
      - image: 4suredev/pingo-dev:v1
        # imagePullPolicy: Always
        name: pwa
        ports:
        - name: pwa
          containerPort: 3000
