pwa/templates/pwa-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pwa
spec:
  hosts:
  - "pingo.dev.pwa.127.0.0.1.nip.io"
  gateways:
  - pingo-dev-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pwa
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pwa
  labels:
    app: pwa
spec:
  ports:
    - name: http
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: pwa
